src/test/ui/suggest-private-fields.stderr
error[E0560]: struct `xc::B` has no field named `aa`
  --> $DIR/suggest-private-fields.rs:25:9
   |
25 |         aa: 20,
   |         ^^^ field does not exist - did you mean `a`?

error[E0560]: struct `xc::B` has no field named `bb`
  --> $DIR/suggest-private-fields.rs:28:9
   |
28 |         bb: 20,
   |         ^^^ `xc::B` does not have this field
   |
   = note: available fields are: `a`

error[E0560]: struct `A` has no field named `aa`
  --> $DIR/suggest-private-fields.rs:35:9
   |
35 |         aa: 20,
   |         ^^^ field does not exist - did you mean `a`?

error[E0560]: struct `A` has no field named `bb`
  --> $DIR/suggest-private-fields.rs:38:9
   |
38 |         bb: 20,
   |         ^^^ field does not exist - did you mean `b`?

error: aborting due to 4 previous errors

